deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vcluster-manager
  namespace: vcluster-manager
spec:
  selector:
    app: vcluster-manager
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
